--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -185,6 +185,26 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h2 id="heading22"><span lang="fr">29 mars 2020</span><span lang="en">29<sup>th</sup> march 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 7 nouvelles matières premières</span><span lang="en" class="ajoutMP">7 new ingredients added </span>
+          </h2>
+          <p>
+              <a class="interpop"  href="../ingredients/Javanol®_Super__Javanol®_Super.html"><span lang="en">Javanol<sup>®</sup> Super (CAS N°: 198404-98-7)</span><span lang="fr">Javanol<sup>®</sup> Super (CAS N°: 198404-98-7)</span></a>
+              <br><a class="interpop"  href="../ingredients/Ebanol®__Ebanol®.html"><span lang="en">Ebanol<sup>®</sup> (CAS N°: 67801-20-1)</span><span lang="fr">Ebanol<sup>®</sup> (CAS N°: 67801-20-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/Frankincense_Resinoid__Encens_Resinoïde.html"><span lang="en">Frankincense Resinoid (CAS N°: 8016-36-2)</span><span lang="fr">Encens Resinoïde (CAS N°: 8016-36-2)</span></a>
+              <br><a class="interpop"  href="../ingredients/Opoponax_EO__Opoponax_HE.html"><span lang="en">Opoponax EO (CAS N°: 8021-36-1)</span><span lang="fr">Opoponax HE (CAS N°: 8021-36-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/Papyrus_EO__Papyrus_HE.html"><span lang="en">Papyrus_EO (CAS N°: 68916-60-9)</span><span lang="fr">Papyrus HE (CAS N°: 68916-60-9)</span></a>
+              <br><a class="interpop"  href="../ingredients/Hydrocarboresin__Hydrocarborésine.html"><span lang="en">Hydrocarboresin (CAS N°: 8016-26-0)</span><span lang="fr">Hydrocarborésine (CAS N°: 8016-26-0)</span></a>
+              <br><a class="interpop"  href="../ingredients/Ambermax_50®__Ambermax_50®.html"><span lang="en">Ambermax 50<sup>®</sup> (CAS N°: 929625-08-1)</span><span lang="fr">Ambermax 50<sup>®</sup> (CAS N°: 929625-08-1)</span></a>
+          </p>
+          <p>
+            <span lang="fr">Optimisation de la barre de recherche</a></span>
+            <span lang="en">Search bar optimisation</a></span>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h2 id="heading22"><span lang="fr">22 mars 2020</span><span lang="en">22<sup>th</sup> march 2020</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
           </h2>
