--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -193,7 +193,7 @@ crossorigin=""/>
               <br><a class="interpop"  href="../ingredients/Ebanol®__Ebanol®.html"><span lang="en">Ebanol<sup>®</sup> (CAS N°: 67801-20-1)</span><span lang="fr">Ebanol<sup>®</sup> (CAS N°: 67801-20-1)</span></a>
               <br><a class="interpop"  href="../ingredients/Frankincense_Resinoid__Encens_Resinoïde.html"><span lang="en">Frankincense Resinoid (CAS N°: 8016-36-2)</span><span lang="fr">Encens Resinoïde (CAS N°: 8016-36-2)</span></a>
               <br><a class="interpop"  href="../ingredients/Opoponax_EO__Opoponax_HE.html"><span lang="en">Opoponax EO (CAS N°: 8021-36-1)</span><span lang="fr">Opoponax HE (CAS N°: 8021-36-1)</span></a>
-              <br><a class="interpop"  href="../ingredients/Papyrus_EO__Papyrus_HE.html"><span lang="en">Papyrus_EO (CAS N°: 68916-60-9)</span><span lang="fr">Papyrus HE (CAS N°: 68916-60-9)</span></a>
+              <br><a class="interpop"  href="../ingredients/Papyrus_EO__Papyrus_HE.html"><span lang="en">Papyrus EO (CAS N°: 68916-60-9)</span><span lang="fr">Papyrus HE (CAS N°: 68916-60-9)</span></a>
               <br><a class="interpop"  href="../ingredients/Hydrocarboresin__Hydrocarborésine.html"><span lang="en">Hydrocarboresin (CAS N°: 8016-26-0)</span><span lang="fr">Hydrocarborésine (CAS N°: 8016-26-0)</span></a>
               <br><a class="interpop"  href="../ingredients/Ambermax_50®__Ambermax_50®.html"><span lang="en">Ambermax 50<sup>®</sup> (CAS N°: 929625-08-1)</span><span lang="fr">Ambermax 50<sup>®</sup> (CAS N°: 929625-08-1)</span></a>
           </p>
