--- a/html/_/index.html
+++ b/html/_/index.html
@@ -967,11 +967,9 @@ crossorigin=""/>
 </div>  <!--fin body-->
 
 <div class="modal-footer">
-  <div class="container-fluid col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center pro_informations" style="background-color: blue;">
-    <p class="textitem-footer">
+  <div class="container-fluid col-12 text-center pro_informations textitem-footer" style="background-color: blue;">
         <span lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
         <span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
-      </p>
   </div>
 </div> <!--fin footer-->
 
