--- a/html/_/index.html
+++ b/html/_/index.html
@@ -966,7 +966,7 @@ crossorigin=""/>
 </div> <!--fin panel-body-->
 </div>  <!--fin body-->
 
-<div class="modal-footer">
+<div class="modal-footer m-0 p-0">
   <div class="container-fluid col-12 text-center pro_informations textitem-footer mt-1 mb-1" style="background-color: blue;">
         <span lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
         <span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
