--- a/html/_/index.html
+++ b/html/_/index.html
@@ -967,9 +967,9 @@ crossorigin=""/>
 </div>  <!--fin body-->
 
 <div class="modal-footer m-0 p-0">
-  <div class="container-fluid col-12 pro_informations textitem-footer mt-1">
-        <span lang="fr">Vous <u>commercialisez</u> des ingrédients présents dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
-        <span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? <br>Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
+  <div class="container-fluid col-12 pro_informations textitem-footer mt-1 mb-0">
+        <span lang="fr" class="mb-0">Vous <u>commercialisez</u> des ingrédients présents dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
+        <span lang="en" class="mb-0">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? <br>Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
   </div>
 </div> <!--fin footer-->
 
