--- a/html/_/support.html
+++ b/html/_/support.html
@@ -199,6 +199,7 @@ crossorigin=""/>
           <ul style="font-size: 0.8em;">
             <li>AMIEL Fanny -<span lang="fr" class="profession"> (Etudiante à l'ESP)</span><span lang="en" class="profession"> (ESP student)</span></li>
             <li>ASTORRI Marc -<span lang="fr" class="profession"> (Ancien Apprenti Parfumeur)</span><span lang="en" class="profession"> (Former Perfumer Apprentice)</span></li>
+            <li class="nouveausupporter">BAKOUCHE Stéphanie -<span lang="fr" class="profession"> (Parfumeur indépendante chez SENSABA)</span><span lang="en" class="profession"> (Perfumer Freelance at SENSABA)</span></li>
             <li>BELLOT Raphaël -<span lang="fr" class="profession"> (Apprenti Chimie Analytique Fine Fragrance)</span><span lang="en" class="profession"> (Apprentice in Fine Fragrance Analytical Chemistry)</span></li>
             <li>BUCHANAN Jessica -<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
             <li>CERVI Yohan -<span lang="fr" class="profession"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Director of Creation at MAELSTROM Parfumeurs)</span></li>
@@ -216,7 +217,7 @@ crossorigin=""/>
             <li>LEMONNIER Aymeric -<span lang="fr" class="profession"> (Apprenti parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Perfumer intern at MAELSTROM Parfumeurs)</span></li>
             <li>MORVAN Axel -<span lang="fr" class="profession"> (Parfumeur Analyste)</span><span lang="en" class="profession"> (Analyst Perfumer)</span></li>
             <li>NORMAND Sophie -<span lang="fr" class="profession"> (Rédactrice - Formatrice Parfum)</span><span lang="en" class="profession"> (Writer - Perfume Trainer)</span></li>
-            <li class="nouveausupporter">OLCZYK Nicolas -<span lang="fr" class="profession"> (Expert Parfum chez Parfums, Tendances & Inspirations)</span><span lang="en" class="profession"> (Fragrance Expert at Parfums, Tendances & Inspirations)</span></li>
+            <li>OLCZYK Nicolas -<span lang="fr" class="profession"> (Expert Parfum chez Parfums, Tendances & Inspirations)</span><span lang="en" class="profession"> (Fragrance Expert at Parfums, Tendances & Inspirations)</span></li>
             <li>OROFINO Delphine -<span lang="fr" class="profession"> (Marketing de la Parfumerie et des Cosmétiques)</span><span lang="en" class="profession"> (Marketing of perfumes and cosmetics)</span></li>
             <li>PROIA Stéphane -<span lang="fr" class="profession"> (Evaluateur Junior)</span><span lang="en" class="profession"> (Junior Evaluator)</span></li>
             <li>RAYNAL Sabine - <span lang="fr" class="profession"> (Enseignante à l’ISIPCA)</span><span lang="en" class="profession"> (Teacher at ISIPCA)</span></li>
