--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -185,6 +185,24 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h2 id="heading22"><span lang="fr">05 avril 2020</span><span lang="en">5<sup>th</sup> april 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 9 nouvelles matières premières</span><span lang="en" class="ajoutMP">9 new ingredients added </span>
+          </h2>
+          <p>
+              <a class="interpop"  href="../ingredients/Myrrh_EO__Myrrhe_HE.html"><span lang="en">Myrrh EO (CAS N°: 9000-45-7)</span><span lang="fr">Myrrhe HE (CAS N°: 9000-45-7)</span></a>
+              <br><a class="interpop"  href="../ingredients/Styrax_EO_Pyrogenated__Styrax_HE_Pyrogénée.html"><span lang="en">Styrax EO Pyrogenated (CAS N°: 94891-27-7)</span><span lang="fr">Styrax HE Pyrogénée (CAS N°: 94891-27-7)</span></a>
+              <br><a class="interpop"  href="../ingredients/Styrax_Resinoid__Styrax_Résinoïde.html"><span lang="en">Styrax Resinoid (CAS N°: 94891-27-7)</span><span lang="fr">Styrax Résinoïde (CAS N°: 94891-27-7)</span></a>
+              <br><a class="interpop"  href="../ingredients/Oregano_EO__Origan_HE.html"><span lang="en">Oregano EO (CAS N°: 8007-11-2)</span><span lang="fr">Origan HE (CAS N°: 8007-11-2)</span></a>
+              <br><a class="interpop"  href="../ingredients/Cassia_EO__Cannelle_Chine_HE.html"><span lang="en">Cassia EO (CAS N°: 8007-80-5)</span><span lang="fr">Cannelle Chine HE (CAS N°: 8007-80-5)</span></a>
+              <br><a class="interpop"  href="../ingredients/Dimethylbenzylcarbinyl_Butyrate__Butyrate_de_Diméthylbenzylcarbinyle.html"><span lang="en">Dimethylbenzylcarbinyl Butyrate (CAS N°: 10094-34-5)</span><span lang="fr">Butyrate de Diméthylbenzylcarbinyle (CAS N°: 10094-34-5)</span></a>
+              <br><a class="interpop"  href="../ingredients/Liffarome®__Liffarome®.html"><span lang="en">Liffarome<sup>®</sup> (CAS N°: 67633-96-9)</span><span lang="fr">Liffarome<sup>®</sup> (CAS N°: 67633-96-9)</span></a>
+              <br><a class="interpop"  href="../ingredients/Manzanate®__Manzanate®.html"><span lang="en">Manzanate<sup>®</sup> (CAS N°: 39255-32-8)</span><span lang="fr">Manzanate<sup>®</sup> (CAS N°: 39255-32-8)</span></a>
+              <br><a class="interpop"  href="../ingredients/Allyl_Cyclohexyl_Propionate__Cyclohexyl_Propionate_d'Allyle.html"><span lang="en">Allyl Cyclohexyl Propionate (CAS N°: 2705-87-5)</span><span lang="fr">Cyclohexyl Propionate d'Allyle (CAS N°: 2705-87-5)</span></a>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h2 id="heading22"><span lang="fr">29 mars 2020</span><span lang="en">29<sup>th</sup> march 2020</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 7 nouvelles matières premières</span><span lang="en" class="ajoutMP">7 new ingredients added </span>
           </h2>
