--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -199,6 +199,9 @@ crossorigin=""/>
               <br><a class="interpop"  href="../ingredients/Manzanate®__Manzanate®.html"><span lang="en">Manzanate<sup>®</sup> (CAS N°: 39255-32-8)</span><span lang="fr">Manzanate<sup>®</sup> (CAS N°: 39255-32-8)</span></a>
               <br><a class="interpop"  href="../ingredients/Allyl_Cyclohexyl_Propionate__Cyclohexyl_Propionate_d'Allyle.html"><span lang="en">Allyl Cyclohexyl Propionate (CAS N°: 2705-87-5)</span><span lang="fr">Cyclohexyl Propionate d'Allyle (CAS N°: 2705-87-5)</span></a>
           </p>
+          <p>
+            <span lang="fr">Parution d’un <a href="https://www.premiumbeautynews.com/fr/scentree-la-classification,16482" target ="_BLANK">article sur le site </a>de Premium Beauty News</span><span lang="en">Publication of an <a href="https://www.premiumbeautynews.com/en/scentree-a-collaborative,16483" target ="_BLANK">article </a>on Premium Beauty News website</span>
+          </p>
         </div>
       </li>
       <li>
