--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -197,7 +197,7 @@ crossorigin=""/>
               <br><a class="interpop"  href="../ingredients/Dimethylbenzylcarbinyl_Butyrate__Butyrate_de_Diméthylbenzylcarbinyle.html"><span lang="en">Dimethylbenzylcarbinyl Butyrate (CAS N°: 10094-34-5)</span><span lang="fr">Butyrate de Diméthylbenzylcarbinyle (CAS N°: 10094-34-5)</span></a>
               <br><a class="interpop"  href="../ingredients/Liffarome®__Liffarome®.html"><span lang="en">Liffarome<sup>®</sup> (CAS N°: 67633-96-9)</span><span lang="fr">Liffarome<sup>®</sup> (CAS N°: 67633-96-9)</span></a>
               <br><a class="interpop"  href="../ingredients/Manzanate®__Manzanate®.html"><span lang="en">Manzanate<sup>®</sup> (CAS N°: 39255-32-8)</span><span lang="fr">Manzanate<sup>®</sup> (CAS N°: 39255-32-8)</span></a>
-              <br><a class="interpop"  href="../ingredients/Allyl_Cyclohexyl_Propionate__Cyclohexyl_Propionate_d'Allyle.html"><span lang="en">Allyl Cyclohexyl Propionate (CAS N°: 2705-87-5)</span><span lang="fr">Cyclohexyl Propionate d'Allyle (CAS N°: 2705-87-5)</span></a>
+              <br><a class="interpop"  href="../ingredients/Allyl_Cyclohexyl_Propionate__Cyclohexyl_Propionate_d_Allyle.html"><span lang="en">Allyl Cyclohexyl Propionate (CAS N°: 2705-87-5)</span><span lang="fr">Cyclohexyl Propionate d'Allyle (CAS N°: 2705-87-5)</span></a>
           </p>
           <p>
             <span lang="fr">Parution d’un <a href="https://www.premiumbeautynews.com/fr/scentree-la-classification,16482" target ="_BLANK">article sur le site </a>de Premium Beauty News</span><span lang="en">Publication of an <a href="https://www.premiumbeautynews.com/en/scentree-a-collaborative,16483" target ="_BLANK">article </a>on Premium Beauty News website</span>
@@ -467,7 +467,7 @@ crossorigin=""/>
             <a class="interpop"  href="../ingredients/Phenyl_Ethyl_Acetate__Acétate_de_Phényléthyle.html"><span lang="en">Phenyl Ethyl Acetate (CAS N°: 103-45-7)</span><span lang="fr">Acétate de Phényléthyle (CAS N°: 103-45-7)</span></a>
             <br><a class="interpop"  href="../ingredients/Trans-2-Hexenyl_Acetate__Acétate_de_trans-2-Hexènyle.html"><span lang="en">Trans-2-Hexenyl Acetate (CAS N°: 2497-18-9)</span><span lang="fr">Acétate de trans-2-Hexènyle (CAS N°: 2497-18-9)</span></a>
             <br><a class="interpop"  href="../ingredients/Cis-6-Nonenal__Cis-6-Nonènal.html"><span lang="en">Cis-6-Nonenal (CAS N°: 2277-19-2)</span><span lang="fr">Cis-6-Nonènal (CAS N°: 2277-19-2)</span></a>
-            <br><a class="interpop"  href="../ingredients/Treemoss_Absolute__Mousse_d'arbre_Absolue.html"><span lang="en">Treemoss Absolute (CAS N°: 90028-67-4)</span><span lang="fr">Mousse d'arbre Absolue (CAS N°: 90028-67-4)</span></a>
+            <br><a class="interpop"  href="../ingredients/Treemoss_Absolute__Mousse_d_arbre_Absolue.html"><span lang="en">Treemoss Absolute (CAS N°: 90028-67-4)</span><span lang="fr">Mousse d'arbre Absolue (CAS N°: 90028-67-4)</span></a>
             <br><a class="interpop"  href="../ingredients/Scots_Pine_EO__Pin_Sylvestre_HE.html"><span lang="en">Scots Pine EO (CAS N°: 8023-99-2)</span><span lang="fr">Pin Sylvestre HE (CAS N°: 8023-99-2)</span></a>
             <br><a class="interpop"  href="../ingredients/Trans-2-Hexenal__Trans-2-Hexènal.html"><span lang="en">Trans-2-Hexenal (CAS N°: 6728-26-3)</span><span lang="fr">Trans-2-Hexènal (CAS N°: 6728-26-3)</span></a>
           </p>
@@ -481,7 +481,7 @@ crossorigin=""/>
           <p>
             <a class="interpop"  href="../ingredients/Cade_EO__Cade_HE.html"><span lang="en">Cade EO (CAS N°: 8013-10-3)</span><span lang="fr">Cade HE (CAS N°: 8013-10-3)</span></a>
             <br><a class="interpop"  href="../ingredients/Methyl_Isoeugenol__Méthyl_Iso_Eugénol.html"><span lang="en">Methyl Isoeugenol (CAS N°: 93-16-3)</span><span lang="fr">Méthyl Iso Eugénol (CAS N°: 93-16-3)</span></a>
-            <br><a class="interpop"  href="../ingredients/Amyl_Phenyl_Acetate__Phényl_Acétate_d'Amyle.html"><span lang="en">Amyl Phenyl Acetate (CAS N°: 5137-52-0)</span><span lang="fr">Phényl Acétate d'Amyle (CAS N°: 5137-52-0)</span></a>
+            <br><a class="interpop"  href="../ingredients/Amyl_Phenyl_Acetate__Phényl_Acétate_d_Amyle.html"><span lang="en">Amyl Phenyl Acetate (CAS N°: 5137-52-0)</span><span lang="fr">Phényl Acétate d'Amyle (CAS N°: 5137-52-0)</span></a>
             <br><a class="interpop"  href="../ingredients/Clary_Sage_EO__Sauge_Sclarée_HE.html"><span lang="en">Clary Sage EO (CAS N°: 8016-63-5)</span><span lang="fr">Sauge Sclarée HE (CAS N°: 8016-63-5)</span></a>
             <br><a class="interpop"  href="../ingredients/Sulfurol__Sulfurol.html"><span lang="en">Sulfurol (CAS N°: 137-00-8)</span><span lang="fr">Sulfurol (CAS N°: 137-00-8)</span></a>
           </p>
