--- a/html/_/index.html
+++ b/html/_/index.html
@@ -410,7 +410,7 @@ crossorigin=""/>
         <span lang="fr"><b>Influence et répartition des chémotypes <sup class="fas fa-question-circle iconetab" title="Caractéristiques des autres variétés et/ou espèces de la plante étudiée."></sup> :</b></span>
         <span lang="en"><b>Chemotypes <sup class="fas fa-question-circle iconetab" title="Other species and varieties characteristics for the studied plant."></sup> :</b></span>
         <br>
-        <span lang="fr" class="lienarticlereglementation mt-1">L'ensemble des informations présentées ci-dessous ont été écrites en partenariat avec <a href="https://www.pierrefranchomme-lab.com/" target="_BLANK">Pierre Franchomme Lab</a>, sommités internationales en matière d'aromathérapie et d'utilisation des différents chemotypes d'huile essentielles médicinales. </span>
+        <span lang="fr" class=" pierrefranchomme mt-1">L'ensemble des informations présentées ci-dessous ont été écrites en partenariat avec <a href="https://www.pierrefranchomme-lab.com/" target="_BLANK">Pierre Franchomme Lab</a>, sommités internationales en matière d'aromathérapie et d'utilisation des différents chemotypes d'huile essentielles médicinales. </span>
         <br>
         <span id="modalbody-chemotype" class="textitem"></span>
       </h3>
