--- a/html/_/index.html
+++ b/html/_/index.html
@@ -419,6 +419,9 @@ crossorigin=""/>
       <h3 class="item d-inline text-size-16px">
         <span lang="fr"><b>Médecine alternative <sup class="fas fa-question-circle iconetab" title="Usages en aromathérapie, phytothérapie ou olfactothérapie."></sup> :</b></span>
         <span lang="en"><b>Aromatherapy <sup class="fas fa-question-circle iconetab" title="Aromatherapy, phytotherapy and olfactotherapy usage."></sup> :</b></span>
+        <br>
+        <span lang="fr" class=" pierrefranchomme mt-1">L'ensemble des informations présentées ci-dessous ont été écrites en partenariat avec <a href="https://www.pierrefranchomme-lab.com/" target="_BLANK">Pierre Franchomme Lab</a>, sommités internationales en matière d'aromathérapie et d'utilisation des différents chemotypes d'huile essentielles médicinales. </span>
+        <br>
         <span id="modalbody-medecine" class="textitem"></span>
       </h3>
     </p>
