--- a/html/_/index.html
+++ b/html/_/index.html
@@ -410,7 +410,7 @@ crossorigin=""/>
         <span lang="fr"><b>Influence et répartition des chémotypes <sup class="fas fa-question-circle iconetab" title="Caractéristiques des autres variétés et/ou espèces de la plante étudiée."></sup> :</b></span>
         <span lang="en"><b>Chemotypes <sup class="fas fa-question-circle iconetab" title="Other species and varieties characteristics for the studied plant."></sup> :</b></span>
         <br>
-        <span lang="fr" class=" pierrefranchomme mt-1">L'ensemble des informations présentées ci-dessous ont été écrites en partenariat avec <a href="https://www.pierrefranchomme-lab.com/" target="_BLANK">Pierre Franchomme Lab</a>, sommités internationales en matière d'aromathérapie et d'utilisation des différents chemotypes d'huile essentielles médicinales. </span>
+        <span lang="fr" class=" pierrefranchomme mt-1">L'ensemble des informations présentées ci-dessous ont été écrites en partenariat avec <a role="button" data-toggle="modal" data-target="#PF" href="#">Pierre Franchomme Lab</a>, sommités internationales en matière d'aromathérapie et d'utilisation des différents chemotypes d'huile essentielles médicinales. </span>
         <br>
         <span id="modalbody-chemotype" class="textitem"></span>
       </h3>
@@ -420,7 +420,7 @@ crossorigin=""/>
         <span lang="fr"><b>Médecine alternative <sup class="fas fa-question-circle iconetab" title="Usages en aromathérapie, phytothérapie ou olfactothérapie."></sup> :</b></span>
         <span lang="en"><b>Aromatherapy <sup class="fas fa-question-circle iconetab" title="Aromatherapy, phytotherapy and olfactotherapy usage."></sup> :</b></span>
         <br>
-        <span lang="fr" class=" pierrefranchomme mt-1">L'ensemble des informations présentées ci-dessous ont été écrites en partenariat avec <a href="https://www.pierrefranchomme-lab.com/" target="_BLANK">Pierre Franchomme Lab</a>, sommités internationales en matière d'aromathérapie et d'utilisation des différents chemotypes d'huile essentielles médicinales. </span>
+        <span lang="fr" class=" pierrefranchomme mt-1">L'ensemble des informations présentées ci-dessous ont été écrites en partenariat avec <a role="button" data-toggle="modal" data-target="#PF" href="#">Pierre Franchomme Lab</a>, sommités internationales en matière d'aromathérapie et d'utilisation des différents chémotypes d'huile essentielles médicinales. </span>
         <br>
         <span id="modalbody-medecine" class="textitem"></span>
       </h3>
@@ -1786,7 +1786,51 @@ crossorigin=""/>
 </div> <!-- fin synthetique -->
 
 
+<!-- MODAL Fragrances of the world -->
 
+<div class="modal fade in  my-modal" tabindex="-1" role="dialog" id="PF">
+<div class="modal-dialog modal-lg" role="document">
+<div class="modal-content">
+
+  <div class="modal-header d-block">
+    <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <h4 class="text-center  modal-title modal-title1">Découvrez Pierre Franchomme Lab</h4>
+  </div>
+
+  <div class="modal-body text-size-14px text-justify scrollbar-inside">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
+          <p> 
+            Cet espace vous sera réservé et <b>vous</b> aurez la possibilité d'écrire un court texte de présentation de votre laboratoire. Vous êtes totalement libre et vous le serez toujours. Si vous souhaitez, à l'avenir, modifier le contenu de cette fenêtre, vous le pourrez également. 
+            <br>
+            Voici un exemple de texte : 
+          </p>
+          <p>
+            Pierre Franchomme est un chercheur français, l’une des sommités dans le domaine des huiles essentielles médicinales. Véritable pionnier dans les années 1975, il n’a jamais cessé depuis d’explorer le monde à la recherche de nouvelles essences qu’il étudie ensuite dans ses laboratoires. Il est notamment le découvreur de plusieurs huiles essentielles aujourd’hui incontournables telles que le ravintsara, le tea tree, l’eucalyptus radié, l’immortelle, l’inule odorante... Son immense travail de recherche a posé les bases de la pharmacologie aromatique, le conduisant à imposer la notion fondamentale de "chémotype" et à collaborer avec des organismes prestigieux : Institut Pasteur de Paris, Faculté de médecine de Toulouse, CNRS, et bien d’autres. Pierre Franchomme est également enseignant en Aromathérapie et fondateur de l’association humanitaire Aromathérapie sans frontières.
+            <br>
+            C’est suite à sa rencontre avec François Daubet, ingénieur passionné par les huiles essentielles, qu’est décidée en 2017 la création d’un laboratoire dédié aux actifs aromatiques : PIERRE FRANCHOMME LAB.
+            L’objectif du laboratoire est de faire partager le fruit des recherches scientifiques menées par Pierre Franchomme et proposer des huiles essentielles et des spécialités de haute qualité, sous les marques Pierre Franchomme-sélection et Pierre Franchomme-les formules.
+            </p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last">
+          <p class="text-center">
+            <img class="img-fluid  max-height-200px" src="../img/PF.png" alt="Pierre Franchomme, expert en aromathérapie">
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal-footer">
+    <button class="btn btn-secondary mx-auto" data-dismiss="modal">
+      <span lang="fr">Fermer</span>
+      <span lang="en">Close</span>
+    </button>
+  </div> <!-- fin footer -->
+</div>
+</div>
+</div>
 
 
 <!--############################################### -->
