--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1815,7 +1815,7 @@ crossorigin=""/>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last">
           <p class="text-center">
-            <img class="img-fluid  max-height-200px" src="../img/PF.png" alt="Pierre Franchomme, expert en aromathérapie">
+            <img class="img-fluid  max-height-200px" src="../img/PF.jpg" alt="Pierre Franchomme, expert en aromathérapie">
           </p>
         </div>
       </div>
