--- a/html/_/index.html
+++ b/html/_/index.html
@@ -420,7 +420,7 @@ crossorigin=""/>
         <span lang="fr"><b>Médecine alternative <sup class="fas fa-question-circle iconetab" title="Usages en aromathérapie, phytothérapie ou olfactothérapie."></sup> :</b></span>
         <span lang="en"><b>Aromatherapy <sup class="fas fa-question-circle iconetab" title="Aromatherapy, phytotherapy and olfactotherapy usage."></sup> :</b></span>
         <br>
-        <span lang="fr" class=" pierrefranchomme mt-1">L'ensemble des informations présentées ci-dessous ont été écrites en partenariat avec <a role="button" data-toggle="modal" data-target="#PF" href="#">Pierre Franchomme Lab</a>, sommités internationales en matière d'aromathérapie et d'utilisation des différents chémotypes d'huile essentielles médicinales. </span>
+        <span lang="fr" class=" pierrefranchomme mt-1">L'ensemble des informations présentées ci-dessous ont été écrites en partenariat avec <a role="button" href="../supporters/pierre_franchomme.html">Pierre Franchomme Lab</a>, sommités internationales en matière d'aromathérapie et d'utilisation des différents chémotypes d'huile essentielles médicinales. </span>
         <br>
         <span id="modalbody-medecine" class="textitem"></span>
       </h3>
