--- a/html/supporters/pierre_franchomme.html
+++ b/html/supporters/pierre_franchomme.html
@@ -9,8 +9,8 @@
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
-<title lang="fr">ScenTree - Cinquième Sens Co-working</title>
-<title lang="en">ScenTree - Cinquième Sens Co-working</title>
+<title lang="fr">ScenTree - Pierre Franchomme Lab</title>
+<title lang="en">ScenTree - Pierre Franchomme Lab</title>
 <!--Description Google-->
 <meta name="description" content="Découvrez qui est Cinquième Sens Co-working, le partenaire de ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
 <!-- Bootstrap -->
@@ -40,23 +40,30 @@ crossorigin=""/>
 
 <div class="modal-header d-block">
   <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <h1 class="text-center  modal-title modal-title1">Cinquième Sens Coworking : Work, Smell & Formulate</h1>
+  <h1 class="text-center  modal-title modal-title1">Découvrez Pierre Franchomme Lab</h1>
 </div>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside">
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
-  <p>
-    <span lang="fr">A l’écoute de son temps, au plus près des acteurs, et des passionnés de la belle parfumerie, Cinquième Sens met tout son savoir-faire et son expérience pour vous offrir un lieu innovant, unique et accessible. Soient 80m <sup>2</sup> d’espace, au pied de la tour Eiffel, comprenant trois niveaux d’accès en toute flexibilité : Olfawork, Olfaction et Olfalab. </span>
-    <span lang="en">Sensitive to its time, close to all of the beautiful perfumery actors and passionates, Cinquième Sens is putting all its know-how and experience to offer an innovative, unique and reachable place. Here are 80 m<sup>2</sup> of space, on bottom of the Eiffel Tower, including three levels of access, in the more flexible way : Olfawork, Olfaction and Olfalab.</span>
+  <p> 
+    Cet espace vous sera réservé et <b>vous</b> aurez la possibilité d'écrire un court texte de présentation de votre laboratoire. Vous êtes totalement libre et vous le serez toujours. Si vous souhaitez, à l'avenir, modifier le contenu de cette fenêtre, vous le pourrez également. 
+    <br>
+    Voici un exemple de texte : 
   </p>
   <p>
-    <span lang="fr">Pour en savoir plus sur Cinquième sens et son espace de co-working, rendez-vous sur leur <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">site</a></span>
-    <span lang="en">To find out more about <h2 class="text-size-14px">Cinquième Sens and its co-working space, follow the link to the <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">website</a></h2></span>
+    Pierre Franchomme est un chercheur français, l’une des sommités dans le domaine des huiles essentielles médicinales. Véritable pionnier dans les années 1975, il n’a jamais cessé depuis d’explorer le monde à la recherche de nouvelles essences qu’il étudie ensuite dans ses laboratoires. Il est notamment le découvreur de plusieurs huiles essentielles aujourd’hui incontournables telles que le ravintsara, le tea tree, l’eucalyptus radié, l’immortelle, l’inule odorante... Son immense travail de recherche a posé les bases de la pharmacologie aromatique, le conduisant à imposer la notion fondamentale de "chémotype" et à collaborer avec des organismes prestigieux : Institut Pasteur de Paris, Faculté de médecine de Toulouse, CNRS, et bien d’autres. Pierre Franchomme est également enseignant en Aromathérapie et fondateur de l’association humanitaire Aromathérapie sans frontières.
+    <br>
+    C’est suite à sa rencontre avec François Daubet, ingénieur passionné par les huiles essentielles, qu’est décidée en 2017 la création d’un laboratoire dédié aux actifs aromatiques : PIERRE FRANCHOMME LAB.
+    L’objectif du laboratoire est de faire partager le fruit des recherches scientifiques menées par Pierre Franchomme et proposer des huiles essentielles et des spécialités de haute qualité, sous les marques Pierre Franchomme-sélection et Pierre Franchomme-les formules.
   </p>
 </div>
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last"><p class="text-center"><img class="img-fluid  max-height-200px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></p></div>
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last">
+  <p class="text-center">
+    <img class="img-fluid  max-height-200px" src="../img/PF.jpg" alt="Pierre Franchomme, expert en aromathérapie">
+  </p>
+</div>
 </div>
 </div>
 </div>
