--- a/html/supporters/pierre_franchomme.html
+++ b/html/supporters/pierre_franchomme.html
@@ -58,6 +58,26 @@ crossorigin=""/>
     C’est suite à sa rencontre avec François Daubet, ingénieur passionné par les huiles essentielles, qu’est décidée en 2017 la création d’un laboratoire dédié aux actifs aromatiques : PIERRE FRANCHOMME LAB.
     L’objectif du laboratoire est de faire partager le fruit des recherches scientifiques menées par Pierre Franchomme et proposer des huiles essentielles et des spécialités de haute qualité, sous les marques Pierre Franchomme-sélection et Pierre Franchomme-les formules.
   </p>
+  <p> Parmis l'ensemble de son travail figurent deux ouvrages que nous recommandons vivement à toutes personnes s'intéressant à l'aromathérapie et/ou à la botanique des huiles essentielles tant ils sont complets, justifiés et d'une extrême pédagogie :  
+    <div class="row">
+      <div class="col-6">
+        <div class="card">
+          <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    </p>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3  order-first order-sm-first order-lg-last">
   <p class="text-center">
