--- a/html/supporters/pierre_franchomme.html
+++ b/html/supporters/pierre_franchomme.html
@@ -62,17 +62,16 @@ crossorigin=""/>
     <div class="row">
       <div class="col-6">
         <div class="card">
-          <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <div class="card-body text-center">
+              <img class="img-fluid max-height-200px" src=";;/img/aromatherapie_exactement.jpg" alt="L’AROMATHÉRAPIE EXACTEMENT">
+              <h5 class="card-title"><a href="https://www.pierrefranchomme-lab.com/nos-publications/27-laromatherapie-exactement.html"> L’AROMATHÉRAPIE EXACTEMENT</a></h5>
           </div>
         </div>
       </div>
       <div class="col-6">
         <div class="card">
-          <div class="card-body">
+          <div class="card-body text-center">
             <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
           </div>
         </div>
       </div>
