--- a/html/supporters/pierre_franchomme.html
+++ b/html/supporters/pierre_franchomme.html
@@ -63,8 +63,8 @@ crossorigin=""/>
       <div class="col-6">
         <div class="card">
           <div class="card-body text-center">
-              <img class="img-fluid max-height-200px" src=";;/img/aromatherapie_exactement.jpg" alt="L’AROMATHÉRAPIE EXACTEMENT">
-              <h5 class="card-title"><a href="https://www.pierrefranchomme-lab.com/nos-publications/27-laromatherapie-exactement.html"> L’AROMATHÉRAPIE EXACTEMENT</a></h5>
+              <img class="img-fluid max-height-200px" src="../img/aromatherapie_exactement.jpg" alt="L’AROMATHÉRAPIE EXACTEMENT">
+              <h5 class="card-title"><a href="https://www.pierrefranchomme-lab.com/nos-publications/27-laromatherapie-exactement.html" target="_blank"> L’AROMATHÉRAPIE EXACTEMENT</a></h5>
           </div>
         </div>
       </div>
