--- a/html/supporters/pierre_franchomme.html
+++ b/html/supporters/pierre_franchomme.html
@@ -64,7 +64,7 @@ crossorigin=""/>
         <div class="card">
           <div class="card-body text-center">
               <img class="img-fluid max-height-200px mb-3" src="../img/aromatherapie_exactement.jpg" alt="L’AROMATHÉRAPIE EXACTEMENT">
-              <h5><a href="https://www.pierrefranchomme-lab.com/nos-publications/27-laromatherapie-exactement.html" target="_blank">L’aromathérapie exactement</a></h5>
+              <h2 class="livresfranchomme"><a href="https://www.pierrefranchomme-lab.com/nos-publications/27-laromatherapie-exactement.html" target="_blank">L’aromathérapie exactement</a></h2>
           </div>
         </div>
       </div>
@@ -72,7 +72,7 @@ crossorigin=""/>
         <div class="card">
           <div class="card-body text-center">
             <img class="img-fluid max-height-200px mb-3" src="../img/sciencehuileessentiellesmedicinales.jpg" alt="La science des huile essentielles médicinales">
-            <h5><a href="https://www.pierrefranchomme-lab.com/nos-publications/28-la-science-des-huiles-essentielles-medicinales.html" target="_blank">La science des huile essentielles médicinales</a></h5>
+            <h2 class="livresfranchomme"><a href="https://www.pierrefranchomme-lab.com/nos-publications/28-la-science-des-huiles-essentielles-medicinales.html" target="_blank">La science des huile essentielles médicinales</a></h2>
           </div>
         </div>
       </div>
