--- a/html/_/index.html
+++ b/html/_/index.html
@@ -409,9 +409,6 @@ crossorigin=""/>
       <h3 class="item  d-inline text-size-16px">
         <span lang="fr"><b>Influence et répartition des chémotypes <sup class="fas fa-question-circle iconetab" title="Caractéristiques des autres variétés et/ou espèces de la plante étudiée."></sup> :</b></span>
         <span lang="en"><b>Chemotypes <sup class="fas fa-question-circle iconetab" title="Other species and varieties characteristics for the studied plant."></sup> :</b></span>
-        <br>
-        <span lang="fr" class=" pierrefranchomme mt-1">L'ensemble des informations présentées ci-dessous ont été écrites en partenariat avec <a role="button" href="../supporters/pierre_franchomme.html">Pierre Franchomme Lab</a>, sommités internationales en matière d'aromathérapie et d'utilisation des différents chemotypes d'huile essentielles médicinales. </span>
-        <br>
         <span id="modalbody-chemotype" class="textitem"></span>
       </h3>
     </p>
@@ -420,7 +417,7 @@ crossorigin=""/>
         <span lang="fr"><b>Médecine alternative <sup class="fas fa-question-circle iconetab" title="Usages en aromathérapie, phytothérapie ou olfactothérapie."></sup> :</b></span>
         <span lang="en"><b>Aromatherapy <sup class="fas fa-question-circle iconetab" title="Aromatherapy, phytotherapy and olfactotherapy usage."></sup> :</b></span>
         <br>
-        <span lang="fr" class=" pierrefranchomme mt-1">L'ensemble des informations présentées ci-dessous ont été écrites en partenariat avec <a role="button" href="../supporters/pierre_franchomme.html">Pierre Franchomme Lab</a>, sommités internationales en matière d'aromathérapie et d'utilisation des différents chémotypes d'huile essentielles médicinales. </span>
+        <span lang="fr" class=" pierrefranchomme mt-1">L'ensemble des informations présentées ci-dessous ont été écrites en partenariat avec <a role="button" href="../supporters/pierre_franchomme.html">Pierre Franchomme Lab</a>, sommitée internationale en matière d'aromathérapie et d'utilisation des différents chémotypes d'huile essentielles médicinales. Nous les remercions pour leur généreuse contribution. </span>
         <br>
         <span id="modalbody-medecine" class="textitem"></span>
       </h3>
