keep the message to the potential sponsors when printing actual sponsors

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -964,12 +964,13 @@ crossorigin=""/>
 
 <div class="modal-footer">
   <div class="container-fluid">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center pro_informations">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
       <p class="textitem-footer">
         <span lang="fr">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
         <span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
       </p>
     </div>
+    <div class="pro_informations col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center"></div>
   </div>
 </div> <!--fin footer-->
 
@@ -1770,6 +1771,7 @@ crossorigin=""/>
             <span lang="en">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
           </p>
         </div>
+       <div class="pro_informations col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center"></div>
       </div>
   </div> <!--fin footer-->
 </div> <!-- fin content -->
