--- a/html/_/index.html
+++ b/html/_/index.html
@@ -301,8 +301,8 @@ crossorigin=""/>
           <span lang="fr"><b>Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b></span>
           <span lang="en"><b>Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</b></span>
         </h2>
-        <h3>
-          <span id="modalbody-tenue" class="textitem d-inline"></span>
+        <h3 class="textitem d-inline">
+          <span id="modalbody-tenue"></span>
         </h3>
         <h2 class="item d-inline text-size-16px">
           <span lang="fr"><b>Prix <sup class="fas fa-question-circle iconetab" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières premières peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </b></span>
