--- a/html/_/index.html
+++ b/html/_/index.html
@@ -296,7 +296,7 @@ crossorigin=""/>
   <div class="container-fluid">
     <div class="row">
       <!--1ère colonne-->
-    <div class="col-xs-12 col-sm-12 col-lg-4 panelcontent" >*
+    <div class="col-xs-12 col-sm-12 col-lg-4 panelcontent">
       <p>
         <h2 class="item d-inline text-size-16px">
           <span lang="fr"><b>Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b></span>
@@ -316,18 +316,22 @@ crossorigin=""/>
         </h3>
       </p>
       <p>
-        <h3 class="item d-inline text-size-16px">
+        <h2 class="item d-inline text-size-16px">
           <span lang="fr"><b>Aspect <sup class="fas fa-question-circle iconetab" title="Couleur et état physique de la matière première."></sup> :</b></span>
           <span lang="en"><b>Aspect <sup class="fas fa-question-circle iconetab" title="Color and physical state of the raw material."></sup> :</b></span>
-          <span id="modalbody-aspect" class="textitem"></span>
+        </h2>
+        <h3 class="textitem d-inline">
+          <span id="modalbody-aspect"></span>
         </h3>
       </p>
       <p>
-        <h3 class="item d-inline text-size-16px">
+        <h2 class="item d-inline text-size-16px">
           <span lang="fr"><b>Composants principaux <sup class="fas fa-question-circle iconetab" title="Molécules majoritairement présentes dans la matière première. Les pourcentages donnés sont ici présents à titre indicatif et ne peuvent être généralisés à l'ensemble des chémotypes et des millésimes de la matière première. "></sup> :</b></span>
           <span lang="en"><b>Major components <sup class="fas fa-question-circle iconetab" title="Majoritary components of the raw material. The given purcentages are for illustrative purposes and cannot be generalized to the whole chemotypes and vintages of the raw material. "></sup> :</b></span>
-          <br>
-          <span id="modalbody-componat" class="textitem2"></span>
+        </h2>
+        <br>
+        <h3 class="textitem2 d-inline">
+          <span id="modalbody-componat"></span>
         </h3>
       </p>
     </div>
